added front end, mongodb and basic user auth outline
